<resources>
  <string name="app_name">MyMoney</string>
  <string name="message_validate_user_login">Username or password is empty </string>
  <string name="message_validate_user_register">Username,password and email must be at least 4 character</string>
  <string name="message_permission_read_request">This app will need to read external storage to display image on your device.</string>
  <string name="message_permission_read_write_request">This app will need to read and write external storage  on your device.</string>
  <string name="message_connect_server_error">Cannot connect to server ! Please try later</string>
  <string name="action_ok">OK</string>
  <string name="txt_gallery">Gallery</string>
  <string name="action_sort_by">Sort by</string>
  <string name="action_sort_a_z">A-Z</string>
  <string name="action_sort_z_a">Z-A</string>
  <string name="action_sort_date_added">Date added</string>
  <string name="action_view_as">View as</string>
  <string name="action_view_as_list">List</string>
  <string name="action_view_as_grid">Grid</string>
  <string name="txt_folder">Folder</string>
  <string name="txt_tap_to_select_image">Tap to select image</string>
  <string name="txt_selected_with_max_limit">%d selected</string>
  <string name="txt_selected_with_limit">%1$d/%2$d selected</string>
  <string name="txt_no_album">No Album</string>
  <string name="txt_done">Done</string>
  <string name="txt_warning_limit">Cannot pick more</string>
  <string name="action_search">Search</string>
  <string name="action_search_currency">Search Currency</string>
  <string name="title_currency">Currency</string>
  <string name="take_in">Take in</string>
  <string name="take_out">Take out</string>
  <string name="goal_money">Goal </string>
  <string name="current_money">Current</string>
  <string name="need_more">Need more</string>
  <string name="message_email_cannot_be_empty">Email cannot be empty</string>
  <string name="message_password_cannot_be_empty">Password cannot be empty</string>
  <string name="message_log_out_successful">Logout successful</string>
  <string name="message_wait_login">Login....</string>
  <string name="txt_username">Username</string>
  <string name="txt_password">Password</string>
  <string name="txt_login">Login</string>
  <string name="txt_register">Register</string>
  <string name="txt_create_account">Create Account</string>
  <string name="txt_forget_password_1">FORGET PASSWORD ?</string>
  <string name="txt_forget_password_2">Forget password</string>
  <string name="txt_login_with_username">Login with Username</string>
  <string name="txt_or"> OR </string>
  <string name="txt_login_with_facebook">Login with Facebook</string>
  <string name="txt_email">Email</string>
  <string name="txt_register_with_facebook">Connect with Facebook</string>
  <string name="txt_submit">Submit</string>
  <string name="message_forgot_password_content">Enter the email address you used to register, and we will send you an email to recover your password in no time.</string>
  <string name="message_sending_email">Sending email...</string>
  <string name="message_warning_need_login">Please try again after login</string>
  <string name="message_creating_account">Creating account...</string>
  <string name="txt_name">Name</string>
  <string name="txt_describe">Describe</string>
  <string name="txt_add_person">Add Person</string>
  <string name="txt_contact">Contacts</string>
  <string name="message_name_person_empty">Name cannot be empty</string>
  <string name="txt_cancel">Cancel</string>
  <string name="action_remove_person">Remove</string>
  <string name="message_empty_person">No Contact.</string>
  <string name="action_checked_all_person">Checked All</string>
  <string name="action_unchecked_all_person">Unchecked All</string>
  <string name="action_update_person">Edit</string>
  <string name="txt_edit_person">Edit Person</string>
  <string name="txt_person">Person</string>
  <string name="txt_saving_name">Name</string>
  <string name="txt_goal_saving">Goal</string>
  <string name="txt_rest_saving">Left</string>
  <string name="btn_list_transaction">TRANSACTIONS LIST</string>
  <string name="txt_wallet_name_saving">All Wallets</string>
  <string name="txt_currencies_saving">đ</string>
  <string name="txt_saved">Saved</string>
  <string name="txt_need_saving">Remaining</string>
  <string name="saving_running">RUNNING</string>
  <string name="saving_finished">FINISHED</string>
  <string name="no_saving">No savings</string>
  <string name="anotation_add_saving">Tap the + button above to add new savings</string>
  <string name="days_left">%s days left</string>
  <string name="content_delete_saving">Do you want to delete this saving?</string>
  <string name="txt_yes">Yes</string>
  <string name="txt_no">No</string>
  <string name="save">Save</string>
  <string name="txt_title_edit_saving">Edit Saving</string>
  <string name="goal">Goal</string>
  <string name="ending_date">Ending date</string>
  <string name="enter_amount">Enter Amount</string>
  <string name="txt_title_add_saving">Add Saving</string>
  <string name="name">Name</string>
  <string name="txt_money">My Money</string>
  <string name="amount">Amount</string>
  <string name="note_take_in_out">This transaction is excludes from report</string>
  <string name="deposit">Deposit to saving plan</string>
  <string name="withdraw">Withdraw from saving plan</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="message_finish_choosing_person">Did you finish to choosing person yet?</string>
  <string name="txt_navigation_cashbook">Transactions</string>
  <string name="txt_navigation_debts">Debts</string>
  <string name="txt_statistics">Statistics</string>
  <string name="txt_navigation_category">Categories</string>
  <string name="txt_navigation_budget">Budgets</string>
  <string name="txt_navigation_event">Events</string>
  <string name="txt_navigation_settings">Settings</string>
  <string name="txt_navigation_tools">Tools</string>
  <string name="txt_navigation_group_others">Others</string>
  <string name="txt_select_wallet">Select Wallet</string>
  <string name="txt_total">Total</string>
  <string name="txt_include_in_total">Include in Total</string>
  <string name="txt_add_wallet">Add Wallet</string>
  <string name="txt_my_wallet">My Wallets</string>
  <string name="action_edit">Edit</string>
  <string name="action_remove_wallet">Remove</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="action_archive">Archive</string>
  <string name="txt_init_balance">Initial Balance</string>
  <string name="txt_currency">Currency</string>
  <string name="txt_enable_notify">Enable Notification</string>
  <string name="txt_quick_help_transaction_notification">Get notified when there are changes to this wallet\'s transactions.</string>
  <string name="txt_add_account_exclude_from_total">Excluded from Total</string>
  <string name="txt_quick_help_exclude_from_total">Ignore this wallet and its balance in the "Total"  mode.</string>
  <string name="txt_archive">Archive</string>
  <string name="txt_info__archive"><![CDATA[Freeze this wallet and stop generating bills &amp; recurring transactions.]]></string>
  <string name="txt_remove_wallet">Remove this wallet</string>
  <string name="message_validate_name_wallet">Name\'s wallet cannot be empty</string>
  <string name="message_validate_currency_wallet">Please choose currency</string>
  <string name="txt_creating_wallet">Creating wallet...</string>
  <string name="txt_no_data">No data.</string>
  <string name="txt_updating_wallet">Updating wallet...</string>
  <string name="txt_wait_a_second">Wait a second...</string>
  <string name="message_waring_remove_wallet">Do you want to remove this wallet</string>
  <string name="message_warning_finish_edit_wallet">Did you finish to editing this wallet</string>
  <string name="txt_edit_wallet">Edit Wallet</string>
  <string name="txt_successful">Successful</string>
  <string name="action_transfer_money">Transfer Money</string>
  <string name="facebook_app_id">271864266660658</string>
  <string name="fb_login_protocol_scheme">fb271864266660658</string>
  <string name="select_date">Select date</string>
  <string name="name_saving">Name Saving</string>
  <string name="input_money">Input money</string>
  <string name="small_date">Smaller than the present day</string>
  <string name="enter_currencies">Enter other currency</string>
  <string name="cancel_currency">CANCEL</string>
  <string name="transfer">TRANSFER</string>
  <string name="spent">Spent</string>
  <string name="mark_as_finished">MARK AS FINISHED</string>
  <string name="edit_event">Edit Event</string>
  <string name="add_event">Add Event</string>
  <string name="all_wallet">All Wallet</string>
  <string name="select_money">Select money</string>
  <string name="deposit_success">Deposit success!</string>
  <string name="withdraw_success">Withdraw success!</string>
  <string name="no_event">No Event</string>
  <string name="nosaving">No Saving</string>
  <string name="txt_ok">OK</string>
  <string name="enter_your_name">Enter your name</string>
  <string name="content_delete_event">Do you want to delete this event?</string>
  <string name="max15digit">15 max digit!</string>
  <string name="erro_negative">Value must > 0</string>
  <string name="add_budget">Add Budget</string>
  <string name="txt_repeat_budget">Repeat this budget</string>
  <string name="txt_info_repeat_budget">Budget will renew automatically.</string>
  <string name="left">Left</string>
  <string name="txt_no_chart">No chart data avaliable</string>
  <string name="txt_recommend_budget">Recommended daily spending</string>
  <string name="txt_project_budget">Project spending</string>
  <string name="txt_actual_daily_spending">Actual daily spending</string>
  <string name="turn_on_notification">Turn on notification</string>
  <string name="turn_off_notification">Turn off notification</string>
  <string name="edit_budget">Edit Budget</string>
  <string name="txt_add_transaction">Add Transaction</string>
  <string name="txt_note">Note</string>
  <string name="txt_add_more_detail">ADD MORE DETAILS</string>
  <string name="txt_with">With</string>
  <string name="txt_set_loacation">Set location</string>
  <string name="txt_select_event">Select event</string>
  <string name="txt_no_remind">No remind</string>
  <string name="txt_report_transaction">Exclude from report</string>
  <string name="txt_dont_include_transaction">Don\'t include this transaction in reports such as Overview</string>
  <string name="budget">Budget</string>
  <string name="txt_info_budget_transaction">This transaction is under these budgets.</string>
  <string name="message_warning_wrong_expression">Wrong expression</string>
  <string name="message_warning_max_digit">Max 15 digit</string>
  <string name="txt_expense">Expense</string>
  <string name="txt_hint_new_category">Category Name</string>
  <string name="txt_income">Income</string>
  <string name="txt_hint_parent_category">Parent Category</string>
  <string name="txt_navigation_saving">Savings</string>
  <string name="txt_cash_back">Cash Back</string>
  <string name="txt_left">Left</string>
  <string name="txt_paid">Paid</string>
  <string name="action_jump_to_today">Jump to Today</string>
  <string name="action_select_time_range">Select time range</string>
  <string name="action_view_by_transaction">View by Transaction</string>
  <string name="txt_notification">Notification</string>
  <string name="action_view_by_day">Day</string>
  <string name="action_view_by_week">Week</string>
  <string name="action_view_by_month">Month</string>
  <string name="action_view_by_custom">Custom</string>
  <string name="action_view_by_all_trans">All Transaction</string>
</resources>