<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_sort_by"
    android:title="@string/action_sort_by">
    <menu>
      <item
        android:id="@+id/action_sort_a_z"
        android:title="@string/action_sort_a_z" />
      <item
        android:id="@+id/action_sort_z_a"
        android:title="@string/action_sort_z_a" />
      <item
        android:id="@+id/action_sort_date_added"
        android:title="@string/action_sort_date_added" />
    </menu>
  </item>

  <item
    android:id="@+id/action_view_as"
    android:title="@string/action_view_as">
    <menu>
      <item
        android:id="@+id/action_view_as_list"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_view_as_list"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom|withText" />
      <item
        android:id="@+id/action_view_as_grid"
        android:checkable="true"
        android:title="@string/action_view_as_grid"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom|withText" />
    </menu>
  </item>
</menu>