<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <RelativeLayout
    android:id="@+id/parent_text_1"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="8dp"
    android:background="@drawable/button_transparent_bounded_darken"
    android:clickable="true"
    android:gravity="center">
    <ImageView
      android:id="@+id/image_view_icon"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:clickable="true"
      android:contentDescription="@string/app_name"
      android:src="@drawable/ic_action_help_light" />
    <EditText
      android:id="@+id/txt_name_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_toEndOf="@id/image_view_icon"
      android:layout_toRightOf="@id/image_view_icon"
      android:hint="@string/txt_hint_new_category"
      android:textSize="24sp" />
  </RelativeLayout>
  <RadioGroup
    android:id="@+id/radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:layout_marginLeft="72dp"
    android:orientation="horizontal">
    <RadioButton
      android:id="@+id/radio_income"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/txt_income"
      android:textSize="16sp" />
    <RadioButton
      android:id="@+id/radio_expense"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:minHeight="48dp"
      android:text="@string/txt_expense"
      android:textSize="16sp" />
  </RadioGroup>
  <RelativeLayout
    android:id="@+id/parent_text_2"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="8dp"
    android:background="@drawable/button_transparent_bounded_darken"
    android:clickable="true"
    android:gravity="center">
    <ImageView
      android:id="@+id/image_view_parent"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/ic_parent_category" />
    <EditText
      android:id="@+id/txt_parent_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_toEndOf="@id/image_view_parent"
      android:layout_toRightOf="@id/image_view_parent"
      android:focusable="false"
      android:hint="@string/txt_hint_parent_category" />
  </RelativeLayout>
</LinearLayout>