<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/color_background_login"
  android:focusable="true"
  android:focusableInTouchMode="true">
  <RelativeLayout
    android:id="@+id/layout_login_top_bar"
    android:layout_width="fill_parent"
    android:layout_height="45.0dip"
    android:background="@color/color_background_login"
    android:gravity="center_vertical">
    <ImageView
      android:id="@+id/btn_back"
      android:layout_width="50.0dip"
      android:layout_height="match_parent"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:padding="10.0dip"
      android:src="@drawable/ic_back" />

  </RelativeLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/layout_login_top_bar"
    android:paddingTop="20dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="72dp"
      android:layout_gravity="center_horizontal"
      android:src="@drawable/ic_logo" />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/txt_login_with_username"
      android:textColor="@color/black"
      android:textSize="20dp" />

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
      <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:inputType="textEmailAddress"
        android:textColor="#303030"
        android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
      <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_login"
      android:textStyle="bold"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="10dp"
      android:padding="12dp"
      android:background="#2DB84C"
      android:text="@string/txt_login"
      android:textColor="@color/color_text_login"
      android:textSize="15sp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txt_or"
      android:textSize="15sp" />

    <FrameLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <com.facebook.login.widget.LoginButton
        android:id="@+id/real_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login_with_facebook"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="12dp"
        android:background="@drawable/border_button_login_facebook"
        android:text="@string/txt_login_with_facebook"
        android:textColor="@color/color_text_login"
        android:textSize="15sp" />

    </FrameLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="2">

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/txt_register"
        android:textColor="#2FB84D"
        android:textSize="15sp" />

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_forget_password"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/txt_forget_password_1"
        android:textColor="#2FB84D"
        android:textSize="15sp" />
    </LinearLayout>
  </LinearLayout>

</RelativeLayout>