<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="20dp">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp">
      <CheckBox
        android:id="@+id/check_box_enable_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:orientation="vertical">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_enable_notify"
          android:textSize="16sp" />
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_quick_help_transaction_notification"
          android:textSize="12sp" />
      </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:clickable="true">


      <CheckBox
        android:id="@+id/check_box_excluded_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:orientation="vertical">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_add_account_exclude_from_total"
          android:textSize="16sp" />
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_quick_help_exclude_from_total"
          android:textSize="12sp" />
      </LinearLayout>

    </RelativeLayout>

  </LinearLayout>


</android.support.v7.widget.CardView>